# autoware_mini_practice_solutions

./: package.xml  practice_4_solution.txt
autoware_mini_practice_solutions/: package.xml
config/: control.yaml  detection.yaml  planning.yaml
launch/: practice_1.launch  practice_5.launch  practice_6_bag.launch  practice_7.launch
nodes/: publisher.py
nodes/control/: pure_pursuit_follower.py
nodes/detection/: camera_traffic_light_detector.py  camera_traffick_light_detector.py  cluster_detector.py  points_clusterer.py
nodes/localization/: localizer.py
nodes/planning/global/: lanelet2_global_planner.py
nodes/planning/local/: collision_points_manager.py  local_path_extractor.py  simple_speed_planner.py
rviz/: practice_6.rviz
