<?xml version="1.0"?>
<package format="2">
  <name>autoware_mini_practice_solutions</name>
  <version>0.0.0</version>
  <description>The autoware_mini_practice_solutions package</description>

  <maintainer email="keidi.kaarmann@gmail.com">linuxuser</maintainer>

  <license>idk</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>novatel_oem7_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
